--- a/styles.css
+++ b/styles.css
@@ -152,13 +152,28 @@ h2 {
 
 .i_con {
   width: 35px;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 #media_links {
   display: flex;
   flex-direction: row;
+  gap: 10px;
+  margin-right: 20px;
+}
+
+.i_cont {
+  width: 38px;
+  height: 38px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px red;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.i_cont:hover {
+  box-shadow: 0 0 10px #ec2222;
 }
 
 .bottom_links {
@@ -227,6 +242,13 @@ h2 {
     padding-right: 20px;
   }
 
+  #media_links {
+    display: flex;
+    flex-direction: row;
+    gap: 60px;
+    margin-right: 20px;
+  }
+
   #bottom_full {
     height: 80px;
   }
@@ -238,6 +260,10 @@ h2 {
   .media {
     width: 1200px;
     height: 800px;
+  }
+
+  .headers {
+    font-size: 75px;
   }
 
   .texty {
@@ -382,6 +408,13 @@ h2 {
     padding-right: 3px;
   }
 
+  .i_cont {
+    width: 15px;
+    height: 15px;
+    border: 3px red;
+    border-radius: 10px;
+  }
+
   #bottom_full {
     height: 20px;
   }
@@ -409,5 +442,12 @@ h2 {
 
   .flex-cols {
     padding-left: 20px;
+  }
+
+  #media_links {
+    display: flex;
+    flex-direction: row;
+    gap: 0px;
+    margin-right: 1px;
   }
 }
